--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "CARDS",
   "devDependencies": {
+    "autoprefixer-core": "^5.2.0",
     "grunt": "~0.4.5",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-execute": "^0.2.2"
+    "grunt-execute": "^0.2.2",
+    "grunt-postcss": "^0.5.0"
   }
 }
