--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "CARDS",
   "devDependencies": {
     "autoprefixer-core": "^5.2.0",
+    "bower": "^1.4.1",
     "grunt": "~0.4.5",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-execute": "^0.2.2",
